--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
   name: github
-  repo: your-github-username/your-repo-name # IMPORTANT: Placeholder
+  repo: Cole-Dunn/pollard-hvac-site 
   branch: main
 
 media_folder: "static/images/uploads"
